--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <input type="text" placeholder="Username" class="urnm" id="username">
             <input type="password" name="" id="password" placeholder="Password" class="pswd">
             <button class="btn" onclick="getInfo()">Login</button>
+            <p class="top">কি কি করতে হবে?</p>
+            <p>১। এড ফি জমা দিতে হবে, যেটা ২৪ ঘণ্টার মধ্যেই ১০০% ফেরত।</p>
+            <p>২। ৩ জন মেম্বারকে এড করতে হবে। এর জন্য ৩০০ টাকা পাবেন নগদ।</p>
+            <p>৩। মাঝে মাঝে এডস দেখতে পারেন, তাহলে এক্সট্রা টাকা পাবেন।</p>
         </div>
 
         <div class="foot">
